{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 338,
  "lineage": "8f3922c4-ce11-7a28-106c-30a721de211e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-group/6a9f05ceada6ce32",
            "arn_suffix": "targetgroup/my-alb-target-group/6a9f05ceada6ce32",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:411194033911:targetgroup/my-alb-target-group/6a9f05ceada6ce32",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07247a81c9550f047"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-0a86b0c2cdde24000",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a86b0c2cdde24000",
            "ingress": [
              {
                "cidr_blocks": [
                  "91.211.97.132/32"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-http"
            },
            "tags_all": {
              "Name": "allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-07247a81c9550f047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_sec1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:security-group/sg-068123b16fdd57294",
            "description": "Allow HTTP inbound traffic to load",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068123b16fdd57294",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from http_sec_group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a86b0c2cdde24000"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-sec1",
            "name_prefix": "",
            "owner_id": "411194033911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-sec1"
            },
            "tags_all": {
              "Name": "allow-sec1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07247a81c9550f047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-027f6c361e7489dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027f6c361e7489dd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-private01"
            },
            "tags_all": {
              "Name": "private-private01"
            },
            "vpc_id": "vpc-07247a81c9550f047"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:subnet/subnet-000dab681e722c194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000dab681e722c194",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411194033911",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-private02"
            },
            "tags_all": {
              "Name": "private-private02"
            },
            "vpc_id": "vpc-07247a81c9550f047"
          },
          "dependencies": [
            "aws_vpc.my_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:411194033911:vpc/vpc-07247a81c9550f047",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-030ffef1893ff10c6",
            "default_route_table_id": "rtb-0f8c769bfb0711e61",
            "default_security_group_id": "sg-0ac792e5b74c52e17",
            "dhcp_options_id": "dopt-0a1b2f3f6a4cd231f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07247a81c9550f047",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8c769bfb0711e61",
            "owner_id": "411194033911",
            "tags": {
              "Name": "my-exam-vpc"
            },
            "tags_all": {
              "Name": "my-exam-vpc"
            }
          }
        }
      ]
    }
  ]
}